@@ -52,6 +52,7 @@ import org.hisp.dhis.cache.CacheProvider;
 import org.hisp.dhis.category.CategoryCombo;
 import org.hisp.dhis.category.CategoryOptionCombo;
 import org.hisp.dhis.category.CategoryService;
+import org.hisp.dhis.common.BaseIdentifiableObject;
 import org.hisp.dhis.common.IdentifiableObjectUtils;
 import org.hisp.dhis.dataapproval.DataApproval;
 import org.hisp.dhis.dataapproval.DataApprovalLevel;
@@ -69,8 +70,9 @@ import org.hisp.dhis.period.PeriodStore;
 import org.hisp.dhis.security.acl.AclService;
 import org.hisp.dhis.setting.SettingKey;
 import org.hisp.dhis.setting.SystemSettingManager;
-import org.hisp.dhis.user.CurrentUserService;
+import org.hisp.dhis.user.CurrentUserUtil;
 import org.hisp.dhis.user.User;
+import org.hisp.dhis.user.UserService;
 import org.hisp.dhis.util.DateUtils;
 import org.springframework.context.ApplicationEventPublisher;
 import org.springframework.jdbc.core.JdbcTemplate;
@@ -101,7 +103,7 @@ public class HibernateDataApprovalStore extends HibernateGenericStore<DataApprov
 
   private final PeriodStore periodStore;
 
-  private final CurrentUserService currentUserService;
+  private final UserService userService;
 
   private final CategoryService categoryService;
 
@@ -116,23 +118,23 @@ public class HibernateDataApprovalStore extends HibernateGenericStore<DataApprov
       CacheProvider cacheProvider,
       PeriodService periodService,
       PeriodStore periodStore,
-      CurrentUserService currentUserService,
       CategoryService categoryService,
       SystemSettingManager systemSettingManager,
-      StatementBuilder statementBuilder) {
+      StatementBuilder statementBuilder,
+      UserService userService) {
     super(entityManager, jdbcTemplate, publisher, DataApproval.class, false);
 
     checkNotNull(cacheProvider);
     checkNotNull(periodService);
     checkNotNull(periodStore);
-    checkNotNull(currentUserService);
+    checkNotNull(userService);
     checkNotNull(categoryService);
     checkNotNull(systemSettingManager);
     checkNotNull(statementBuilder);
 
     this.periodService = periodService;
     this.periodStore = periodStore;
-    this.currentUserService = currentUserService;
+    this.userService = userService;
     this.categoryService = categoryService;
     this.systemSettingManager = systemSettingManager;
     this.statementBuilder = statementBuilder;
@@ -284,17 +286,18 @@ public class HibernateDataApprovalStore extends HibernateGenericStore<DataApprov
     // Get validation criteria
     // ---------------------------------------------------------------------
 
-    final User user = currentUserService.getCurrentUser();
+    String currentUsername = CurrentUserUtil.getCurrentUsername();
+    User currentUser = userService.getUserByUsername(currentUsername);
+
     final String strArrayUserGroups =
-        CollectionUtils.isEmpty(user.getGroups())
+        (currentUser == null || CollectionUtils.isEmpty(currentUser.getGroups()))
             ? null
             : "{"
                 + String.join(
                     ",",
-                    user.getGroups().stream()
-                        .map(group -> group.getUid())
-                        .collect(Collectors.toList()))
+                    currentUser.getGroups().stream().map(BaseIdentifiableObject::getUid).toList())
                 + "}";
+
     final String co_group_sharing_check_query =
         strArrayUserGroups != null
             ? " and (not "
@@ -312,7 +315,8 @@ public class HibernateDataApprovalStore extends HibernateGenericStore<DataApprov
 
     List<DataApprovalLevel> approvalLevels = workflow.getSortedLevels();
 
-    Set<OrganisationUnit> userOrgUnits = user.getDataViewOrganisationUnitsWithFallback();
+    Set<OrganisationUnit> userOrgUnits =
+        currentUser != null ? currentUser.getDataViewOrganisationUnitsWithFallback() : null;
 
     boolean isDefaultCombo =
         attributeOptionCombos != null
@@ -322,8 +326,9 @@ public class HibernateDataApprovalStore extends HibernateGenericStore<DataApprov
                 .equals(attributeOptionCombos.toArray()[0]);
 
     boolean maySeeDefaultCategoryCombo =
-        (CollectionUtils.isEmpty(user.getCogsDimensionConstraints())
-            && CollectionUtils.isEmpty(user.getCatDimensionConstraints()));
+        currentUser != null
+            && (CollectionUtils.isEmpty(currentUser.getCogsDimensionConstraints())
+                && CollectionUtils.isEmpty(currentUser.getCatDimensionConstraints()));
 
     // ---------------------------------------------------------------------
     // Validate
@@ -332,7 +337,7 @@ public class HibernateDataApprovalStore extends HibernateGenericStore<DataApprov
     if (isDefaultCombo && !maySeeDefaultCategoryCombo) {
       log.warn(
           "DefaultCategoryCombo selected but user "
-              + user.getUsername()
+              + currentUsername
               + " lacks permission to see it.");
 
       return new ArrayList<>(); // Unapprovable.
@@ -347,7 +352,7 @@ public class HibernateDataApprovalStore extends HibernateGenericStore<DataApprov
     if (CollectionUtils.isEmpty(userApprovalLevels)) {
       log.warn(
           "No user approval levels for user "
-              + user.getUsername()
+              + currentUsername
               + ", workflow "
               + workflow.getName());
 
@@ -357,7 +362,7 @@ public class HibernateDataApprovalStore extends HibernateGenericStore<DataApprov
     if (orgUnits != null) {
       for (OrganisationUnit orgUnit : orgUnits) {
         if (!orgUnit.isDescendant(userOrgUnits)) {
-          log.debug("User " + user.getUsername() + " can't see orgUnit " + orgUnit.getName());
+          log.debug("User " + currentUsername + " can't see orgUnit " + orgUnit.getName());
 
           return new ArrayList<>(); // Unapprovable.
         }
@@ -371,7 +376,9 @@ public class HibernateDataApprovalStore extends HibernateGenericStore<DataApprov
     boolean acceptanceRequiredForApproval =
         systemSettingManager.getBoolSetting(SettingKey.ACCEPTANCE_REQUIRED_FOR_APPROVAL);
 
-    final boolean isSuperUser = currentUserService.currentUserIsSuper();
+    final boolean isSuperUser =
+        CurrentUserUtil.getCurrentUserDetails() != null
+            && CurrentUserUtil.getCurrentUserDetails().isSuper();
 
     final String startDate = DateUtils.getMediumDateString(period.getStartDate());
     final String endDate = DateUtils.getMediumDateString(period.getEndDate());
@@ -681,16 +688,16 @@ public class HibernateDataApprovalStore extends HibernateGenericStore<DataApprov
                 : // Filter out COs the user doesn't have permission to see:
                 "or ( ( co.sharing->>'public' is null or left(co.sharing->>'public', 1) != 'r' )"
                     + " and ( co.sharing->>'owner' is null or co.sharing->>'owner' != '"
-                    + user.getUid()
+                    + CurrentUserUtil.getCurrentUserDetails().getUid()
                     + "' )"
                     + " and ( not "
                     + JsonbFunctions.HAS_USER_ID
                     + "( co.sharing, '"
-                    + user.getUid()
+                    + CurrentUserUtil.getCurrentUserDetails().getUid()
                     + "') or not "
                     + JsonbFunctions.CHECK_USER_ACCESS
                     + "( co.sharing, '"
-                    + user.getUid()
+                    + CurrentUserUtil.getCurrentUserDetails().getUid()
                     + "', '"
                     + AclService.LIKE_READ_METADATA
                     + "') )"
@@ -725,7 +732,7 @@ public class HibernateDataApprovalStore extends HibernateGenericStore<DataApprov
 
     log.debug(
         "User "
-            + user.getUsername()
+            + CurrentUserUtil.getCurrentUserDetails()
             + " superuser "
             + isSuperUser
             + " workflow "
